cloud-controller/aws/eks/check-public-access-cidr/check-public-access-cidr.yaml
apiVersion: nirmata.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-public-access-cidr
  annotations:
    policies.kyverno.io/title: Check Public Access Cidr
    policies.kyverno.io/category: EKS Best Practices
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Ensuring that the Amazon EKS public endpoint is not accessible to 0.0.0.0/0 is a fundamental security measure that helps protect your EKS clusters from unauthorized access, security threats, and compliance violations.
  labels:
    app: cloud-control-point
spec:
  failureAction: Audit
  matchConditions:
    - name: match-create-update
      expression: >
        request.operation in ['CREATE', 'UPDATE']
    - name: aws-eks-cluster
      expression: >
        object.TypeName == 'AWS::EKS::Cluster'
  validations:
    - expression: >
        has(object.ResourceDescription) ?
        (
          has(object.ResourceDescription.Properties) &&
          has(object.ResourceDescription.Properties.resourcesVpcConfig) &&
          (
            object.ResourceDescription.Properties.resourcesVpcConfig.endpointPublicAccess == false ||
            (
              object.ResourceDescription.Properties.resourcesVpcConfig.endpointPublicAccess == true &&
              has(object.ResourceDescription.Properties.resourcesVpcConfig.publicAccessCidrs) &&
              !object.ResourceDescription.Properties.resourcesVpcConfig.publicAccessCidrs.exists(cidr, cidr == '0.0.0.0/0')
            )
          )
        ) :
        (
          has(object.resourcesVpcConfig) &&
          (
            object.resourcesVpcConfig.endpointPublicAccess == false ||
            (
              object.resourcesVpcConfig.endpointPublicAccess == true &&
              has(object.resourcesVpcConfig.publicAccessCidrs) &&
              !object.resourcesVpcConfig.publicAccessCidrs.exists(cidr, cidr == '0.0.0.0/0')
            )
          )
        )
      message: "Ensuring that the Amazon EKS public endpoint is not accessible to 0.0.0.0/0"
